fixed alignment

--- a/shoppingcart/src/Styles/SizeSelect.css
+++ b/shoppingcart/src/Styles/SizeSelect.css
@@ -1,7 +1,11 @@
-#size {
+.size-select-container {
   border: 3px solid black;
   border-radius: 3px;
   height: 34px;
-  text-align: center;
-  box-sizing: border-box;
+}
+
+#size {
+  width: 100%;
+  height: 100%;
+  border: none;
 }
